#69 Refactoring GameObject and compoentn Position